...
          </View>
          <CartTable />
        </View>
        {items.length > 0 && (
          <View
            style={styles.orderSummaryContainer}
            testID="order-summary-container"
          >
            <OrderSummary />
          </View>
        )}
      </KeyboardAvoidingView>
    </SafeAreaView>
...
